# ijoka

./: .gitignore  .mcp.json  CLAUDE.md  GEMINI.md  README.md  feature_list.json  feature_list.json.deprecated  package.json  pnpm-lock.yaml  workflow-hooks-design.md
.claude-plugin/: marketplace.json
.gemini/: settings.json
.parallel/plans/: plan.yaml
.parallel/plans/active/: plan.yaml
.parallel/scripts/: setup_worktrees.sh
.plans/: cross-session-continuity.yaml
.plans/implementation-plan-alignment-system/: design.md
.plans/implementation-plan-alignment-system/tasks/: task-0.md  task-1.md  task-2.md  task-3.md
.plans/implementation-plan-ijoka-analytics-system/: design.md
.plans/implementation-plan-ijoka-analytics-system/tasks/: task-0.md  task-1.md  task-2.md  task-3.md  task-4.md  task-5.md  task-6.md  task-7.md
.plans/implementation-plan-tier-1-claude-code-observabili/: design.md
.plans/implementation-plan-tier-1-claude-code-observabili/tasks/: task-0.md  task-1.md  task-2.md  task-3.md  task-4.md  task-5.md  task-6.md
_archived/mcp-server/: package.json
_archived/mcp-server/src/: db.ts  index.ts
apps/desktop/: index.html  package.json  tsconfig.json
apps/desktop/src/: App.vue
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: commands.rs  db.rs  graph_db.rs  main.rs  server.rs  watcher.rs
apps/phoenix/: .gitignore  README.md  mix.exs
scripts/: update-claude-plugin.sh  verify_db_feature.sh
shared/types/: index.ts  package.json
(+54 files in other folders)
