[package]
name = "agentkanban"
version = "0.1.0"
description = "Unified observability and task management for AI coding agents"
authors = ["Shakes"]
edition = "2021"
license = "MIT"
repository = "https://github.com/yourusername/agentkanban"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri
tauri = { version = "2", features = ["tray-icon", "devtools", "image-png"] }
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
tauri-plugin-fs = "2"

# SQLite
rusqlite = { version = "0.31", features = ["bundled"] }

# File watching
notify = "6"
notify-debouncer-mini = "0.4"

# HTTP server (for receiving hook events)
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utilities
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }
glob = "0.3"
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = "0.3"
urlencoding = "2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
